// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellGroup title slot 1`] = `
<div>
  <div class="zv-cell-group__title">CustomTitle</div>
  <div class="zv-cell-group zv-hairline--top-bottom"></div>
</div>
`;

exports[`arrow direction 1`] = `
<div role="button" tabindex="0" class="zv-cell zv-cell--clickable"><i class="zv-icon zv-icon-arrow-down zv-cell__right-icon">
    <!----></i></div>
`;

exports[`icon-prefix prop 1`] = `
<div class="zv-cell"><i class="my-icon my-icon-success zv-cell__left-icon">
    <!----></i></div>
`;

exports[`render slot 1`] = `
<div class="zv-cell">Custom Icon<div class="zv-cell__title">Custom Title<div class="zv-cell__label">Custom Label</div>
  </div>Custom Extra</div>
`;

exports[`title-style prop 1`] = `
<div class="zv-cell">
  <div class="zv-cell__title" style="color: red;"><span>title</span></div>
</div>
`;
